--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,3 +10,19 @@ services:
       - "3000:3000"
     tty: true
     command: /bin/bash
+  backend:
+    image: node:18.17.1-bookworm
+    volumes:
+      - ./backend:/app
+    working_dir: /app
+    ports:
+      - "3100:3100"
+    tty: true
+    command: /bin/bash
+  shota-db:
+    image: postgres:15.4-bookworm
+    environment:
+      POSTGRES_USER: shota
+      POSTGRES_PASSWORD: password
+      POSTGRES_DB: shota
+    tty: true
